changed mac merge app to kalediscope via sourcetree and added a alias for searching for apps connected on a port

--- a/git/mac/.gitconfig
+++ b/git/mac/.gitconfig
@@ -79,10 +79,12 @@
 	default = matching
 [core]
   editor = vim
-	excludesfile = ~/.gitignore_global
+	excludesfile = /Users/ferronhanse/.gitignore_global
 [difftool "sourcetree"]
-	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	cmd = /usr/local/bin/ksdiff -w \"$LOCAL\" \"$REMOTE\"
 	path = 
 [mergetool "sourcetree"]
-	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	cmd = /usr/local/bin/ksdiff --merge --output \"$MERGED\" --base \"$BASE\" -- \"$LOCAL\" --snapshot \"$REMOTE\" --snapshot
 	trustExitCode = true
+[mergetool]
+	keepBackup = true
