--- a/git/linux/.gitconfig
+++ b/git/linux/.gitconfig
@@ -9,6 +9,8 @@
 	uc = reset --soft 
 	p = push
 	u = pull
+	cm = !git commit -m
+	a = !git add . && git status
 	b = branch
 	co = checkout
 	d = diff
@@ -53,12 +55,27 @@
 	fm = "!f() { git log --pretty=format:'%C(yellow)%h  %Cblue%ad  %Creset%s%Cgreen  [%cn] %Cred%d' --decorate --date=short --grep=$1; }; f"
 	# Remove branches that have already been merged with master
 	dm = "!git branch --merged | grep -v '\\*' | xargs -n 1 git branch -d"
-
+	# fetch all remote branches and remove branches that no longer exists
+	fa = fetch --all --prune
+	# YAWD
+	dw = diff --word-diff=color
+	# Spell check your git commits with aspell
+	spell = !git log --pretty=format:%s%n%n%b -n1 > /tmp/aspell.txt && aspell -c /tmp/aspell.txt && git commit --amend -F /tmp/aspell.txt
+	# Commit changes to current head as amended commit
+	plus = commit --amend -a -C HEAD
+	# new merge
+	merge2 = merge --squash --no-ff --log
 [core]
   editor = vim
 [merge]
   tool = meld
-  
+
+[fetch]
+    prune = true  
+	
+[credential]
+	helper = cache
+	
 [apply]
 	# Detect whitespace errors when applying a patch
 	whitespace = fix
@@ -83,4 +100,7 @@
 # URL shorthands
 
 [push]
-	default = matching
+  default = tracking
+	
+[pack]
+    threads=4
