added custom function to cygwin for clearing tmp folder. windows/cygwin is being retarded

--- a/git/linux/.gitconfig
+++ b/git/linux/.gitconfig
@@ -68,7 +68,7 @@
 	merge2 = merge --squash --no-ff --log
 [core]
   editor = vim
-  autocrlf = true
+  autocrlf = false
   safecrlf = warn
 [merge]
   tool = meld
