--- a/git/cygwin/.gitconfig
+++ b/git/cygwin/.gitconfig
@@ -10,7 +10,7 @@
 	p = push
 	u = pull
 	cm = !git commit -m
-	a = !git add . && git status
+	a = !git add --all && git status
 	b = branch
 	co = checkout
 	d = diff
