more vagrant goodies

--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -19,6 +19,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     config.vm.define name do |c|
       c.vm.box = opts[:box]
       c.vm.provision :shell, :path => opts[:provision]
+			c.vm.network "forwarded_port", guest: 10060, host: 10077
+			c.vm.network "forwarded_port", guest: 14993, host: 14999
+			c.vm.network "forwarded_port", guest: 27017, host: 27020
     end
   end
 end
+# 10.0.2.2 
