Update - move work related scripts tp work.sh - added vagrant customizations - updated vagrant provisions to be more lean - added vagrant/docker detect to vimrc - added vagrant docker provision file # (might remove this)

--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -11,6 +11,10 @@ MACHINES =
       { :box       => "chef/centos-6.5",
         :provision => "personal_git/dotfiles/vagrant/bootstrap-rhel.sh"
       },
+    "docker" =>
+      { :box       => "chef/centos-6.5",
+        :provision => "personal_git/dotfiles/vagrant/bootstrap-docker.sh"
+      },			
   }
 
 VAGRANTFILE_API_VERSION = "2"
