convert tab to space and added a few code cleanup

--- a/git/cygwin/.gitconfig
+++ b/git/cygwin/.gitconfig
@@ -10,6 +10,7 @@
 	p = push
 	u = pull
 	cm = !git commit -m
+    ca = !git commit -am
 	a = !git add --all && git status
 	b = branch
 	co = checkout
