--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,55 +1,216 @@
-# SCREENSHOT EXAMPLE: http://grab.by/bzg3
-##############################
-#  _
-# | |_ _ __ ___  _   ___  __
-# | __| '_ ` _ \| | | \ \/ /
-# | |_| | | | | | |_| |>  < 
-#  \__|_| |_| |_|\__,_/_/\_\
+# ~/.tmux.conf
 #
-#############################
- 
-############################################################################
-############################################################################
-# Reset Prefix
-############################################################################
-set -g prefix C-a
-bind-key a send-prefix # for nested tmux sessions
- 
-############################################################################
-# Global options
-############################################################################
-# large history
-set-option -g history-limit 10000
- 
-# colors
-setw -g mode-bg black
-set-option -g default-terminal "screen-256color" #"xterm-256color" # "screen-256color"
-set-option -g pane-active-border-fg green
- 
-# utf8 support
-set-window-option -g utf8 on
- 
- 
-# basic settings
-set-window-option -g xterm-keys on # for vim
-set-window-option -g mode-keys vi # vi key
-set-window-option -g monitor-activity on
-set-window-option -g window-status-current-fg white
-setw -g window-status-current-attr reverse
- 
-# Automatically set window title
-setw -g automatic-rename
- 
-# use mouse # More on mouse support http://floriancrouzat.net/2010/07/run-tmux-with-mouse-support-in-mac-os-x-terminal-app/
+# See the following files:
+#
+#   /opt/local/share/doc/tmux/t-williams.conf
+#   /opt/local/share/doc/tmux/screen-keys.conf
+#   /opt/local/share/doc/tmux/vim-keys.conf
+#
+# URLs to read:
+#
+#   http://blog.yjl.im/2009/11/migrating-to-tmux-from-gnuscreen.html
+#   http://blog.hawkhost.com/2010/06/28/tmux-the-terminal-multiplexer/
+#   http://blog.hawkhost.com/2010/07/02/tmux-%E2%80%93-the-terminal-multiplexer-part-2/
+#   http://www.dayid.org/os/notes/tm.html
+#
+# Other sample tmux.conf files
+#
+#   http://www.mindfuzz.net/?p=178
+#
+# -----------------------------------------------------------------------------
+# Global settings 
+
+# Set prefix key to Ctrl-a
+unbind-key C-b
+set-option -g prefix C-a
+
+# send the prefix to client inside window
+bind-key C-a send-prefix
+
+# toggle last window like screen
+bind-key C-a last-window
+
+# open a man page in new window
+bind-key / command-prompt "split-window 'exec man %%'"
+
+# quick view of processes
+#bind-key "~" split-window "exec htop"
+
+# scrollback buffer n lines
+set -g history-limit 5000
+
+# listen for activity on all windows
+set -g bell-action any
+#set -g bell-action none
+
+# start window indexing at zero (default)
+set -g base-index 0
+
+# instructs tmux to expect UTF-8 sequences
+setw -g utf8 on
+#sest -g utf8 on
+
+# tell tmux to use 256 colour terminal
+set -g default-terminal "screen-256color"
+
+# xterm-style function key sequences
+setw -g xterm-keys on
+
+# control automatic window renaming
+setw -g automatic-rename off
+
+# enable wm window titles
+set -g set-titles on
+
+# wm window title string (uses statusbar variables)
+#set -g set-titles-string "tmux.#I.#W"
+
+# don't close windows. just deactivate them. use respawn-window to reactivate.
+#setw -g remain-on-exit on
+
+
+# Key bindings 
+
+# reload settings
+bind-key r source-file ~/.tmux.conf
+
+# detach client
+bind-key d detach
+bind-key C-d detach
+
+# choose a client to detach
+bind-key D choose-client
+
+# choose window/session
+bind-key "'" choose-window
+bind-key '"' choose-session
+
+# display visible indicator of each pane
+bind-key w display-panes
+
+# navigate panes using jk, and ctrl+jk (no prefix)
+bind-key -r j select-pane -t :.-
+bind-key -r k select-pane -t :.+
+bind-key -r C-j select-pane -t :.-
+bind-key -r C-k select-pane -t :.+
+
+# navigate windows using hl, and ctrl-hl (no prefix)
+bind-key -r h select-window -t :-
+bind-key -r l select-window -t :+
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
+
+# swap panes
+bind-key -r J swap-pane -D
+bind-key -r K swap-pane -U
+
+# Ctrl-Left/Right cycles thru windows (no prefix)
+bind-key -n "C-Left"  select-window -t :-
+bind-key -n "C-Right" select-window -t :+
+
+# Ctrl-Up/Down cyles thru panes (no prefix)
+bind-key -n "C-Up"   select-pane -t :.-
+bind-key -n "C-Down" select-pane -t :.+
+
+# Cycle to next pane
+bind-key -r Tab select-pane -t :.+
+
+# kill current pane/window
+bind-key q confirm-before kill-pane
+bind-key Q confirm-before kill-window
+bind-key C-q confirm-before kill-pane
+bind-key x kill-pane
+bind-key X kill-window
+
+# window layouts (emacs-like)
+#bind-key 1 break-pane
+#bind-key 2 select-layout even-vertical
+#bind-key 3 select-layout even-horizontal
+#bind-key o select-pane -U
+
+# specific window layouts
+#bind -r y next-layout
+#bind o select-layout "active-only"
+#bind O select-layout "main-vertical"
+
+# copying and pasting
+bind-key [ copy-mode
+bind-key ] paste-buffer -s \015
+
+# vi-style controls for copy mode
+setw -g mode-keys vi
+
+# enable mouse selection in copy mode
 setw -g mode-mouse on
-#setw -g mouse-resize-pane on
-#set -g mouse-select-window on
-set -g mouse-select-pane on
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
- 
-# vi movement keys
-# set-option -g status-keys vi
- 
+
+# list all paste buffers (default key is '#')
+bind-key b list-buffers
+
+# choose buffer to paste interactively (default key was '=')
+bind-key p choose-buffer
+
+# delete the most recently copied buffer of text (default key was '-')
+bind-key x delete-buffer
+
+
+# Screen-like key bindings 
+
+# new window
+bind-key C-c new-window
+bind-key c new-window
+
+# next
+bind-key -r Space next-window
+bind-key -r "C-Space" next-window
+
+# prev
+bind-key BSpace previous-window
+
+# title (default key in tmux is ',')
+bind-key A command-prompt "rename-window %%"
+
+# quit
+bind-key \ confirm-before kill-server
+
+# displays
+bind-key * list-clients
+
+# redisplay (default key in tmux is 'r')
+#bind-key C-l refresh-client
+#bind-key l refresh-client
+bind-key R refresh-client
+
+
+# Split windows like vim 
+
+# vim's definition of a horizontal/vertical split is reversed from tmux's
+#bind-key s split-window -v
+#bind-key v split-window -h
+
+# alternatively, use better mnemonics for horizontal/vertical splits
+bind-key - split-window -v
+bind-key _ split-window -v
+bind-key | split-window -h
+
+# resize panes like vim
+bind-key -r < resize-pane -L 3
+bind-key -r > resize-pane -R 3
+bind-key -r + resize-pane -U 1
+bind-key -r = resize-pane -D 1
+
+
+# Statusbar settings 
+
+# toggle statusbar
+bind-key s set status
+
+# use vi-style key bindings in the status line
+set -g status-keys vi
+
+# amount of time for which status line messages and other indicators
+# are displayed. time is in milliseconds.
+set -g display-time 2000
+
 ############################################################################
 # Status Bar
 ############################################################################
@@ -60,103 +221,32 @@ set-option -g status-fg cyan
 set-option -g status-interval 5
 set-option -g status-left-length 30
 set-option -g status-left '#[fg=magenta]» #[fg=blue,bold]#T#[default]'
-set-option -g status-right '#[fg=red,bold][[ #(git branch) branch ]] #[fg=cyan]»» #[fg=blue,bold]###S #[fg=magenta]%R %m-%d#(acpi | cut -d ',' -f 2)#[default]'
+set-option -g status-right '#[fg=red,bold][[#(git rev-parse --abbrev-ref HEAD) ]] #[fg=cyan]»» #[fg=magenta]%R %m-%d'
 set-option -g visual-activity on
  
 # Titles (window number, program name, active (or not)
 set-option -g set-titles on
 set-option -g set-titles-string '#H:#S.#I.#P #W #T'
- 
- 
-############################################################################
-# Unbindings
-############################################################################
-#unbind [ # copy mode bound to escape key
-unbind j
-unbind C-b # unbind default leader key
-unbind '"' # unbind horizontal split
-unbind %   # unbind vertical split
- 
- 
-############################################################################
-# Bindings
-############################################################################
-# reload tmux conf
-bind-key r source-file ~/.tmux.conf
- 
-#bind Escape copy-mode
- 
-# new split in current pane (horizontal / vertical)
-bind-key - split-window -v # split pane horizontally
-bind-key \ split-window -h # split pane vertically
- 
-# list panes
-bind-key Space list-panes
- 
-# break-pane
-bind-key Enter break-pane
- 
-# join-pane [-dhv] [-l size | -p percentage] [-s src-pane]
-# [-t:dst-window.dst-pane] (destination window (dot) destination pane
-#                (alias: joinp)
-#
-#bind C-j command-prompt "joinp"
-#bind C-j command-prompt "join-pane"
-#bind-key j command-prompt "join-pane -s '%%'"
-#bind-key j command-prompt "joinp -t:0"
-bind-key Space command-prompt "joinp -t:%%" # %% = prompt for window.pane [-V|H] # vert|hor split
- 
-#previous pane
-bind-key -n C-up prev
-bind-key -n C-left prev
- 
-#next pane
-bind-key -n C-right next
-bind-key -n C-down next
- 
-############################################################################
-# windows
-############################################################################
-set-window-option -g window-status-current-bg red
-bind C-j previous-window
-bind C-k next-window
-bind-key C-a last-window # C-a C-a for last active window
-bind A command-prompt "rename-window %%"
-# By default, all windows in a session are constrained to the size of the 
-# smallest client connected to that session, 
-# even if both clients are looking at different windows. 
-# It seems that in this particular case, Screen has the better default 
-# where a window is only constrained in size if a smaller client 
-# is actively looking at it.
-setw -g aggressive-resize on
- 
-############################################################################
-# panes
-############################################################################
-# Navigation ---------------------------------------------------------------
-# use the vim motion keys to move between panes
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
- 
-# Resizing ---------------------------------------------------------------
-bind-key C-h resize-pane -L
-bind-key C-j resize-pane -D
-bind-key C-k resize-pane -U
-bind-key C-l resize-pane -R
- 
-# use vim motion keys while in copy mode
-setw -g mode-keys vi
- 
-############################################################################
-# layouts
-############################################################################
-bind o select-layout "active-only"
-bind M-- select-layout "even-vertical"
-bind M-| select-layout "even-horizontal"
-bind M-r rotate-window
- 
- 
-# focus on first window
-# select-window -t 0
+
+
+# Session initialization 
+
+# Note:
+#   new  - alias for new-session
+#   neww - alias for new-window
+
+# first session
+#new -d -s0
+#neww -d
+#neww -d
+#neww -d
+
+# second session
+#new -d -s1
+#neww -d
+#neww -d
+
+#select-window -t1
+
+# -----------------------------------------------------------------------------
+# vim: fen fdl=0 fdm=marker
