--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,6 +39,8 @@ bind-key / command-prompt "split-window 'exec man %%'"
 # scrollback buffer n lines
 set -g history-limit 100000
 
+bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
+
 # listen for activity on all windows
 set -g bell-action any
 #set -g bell-action none
