added composer, phpunit, more paths and a nice function to clean mongo!

--- a/git/gitignore.properties
+++ b/git/gitignore.properties
@@ -149,7 +149,8 @@ Temporary Items
 .apdisk
 
 # gitignore for work related files
-runlocal*.sh
+runlocal*
+npm-debug.log
 *.iml
 mongo_utf8_test.js
 *.csproj
