put dotfiles on a diet

--- a/git/gitignore.properties
+++ b/git/gitignore.properties
@@ -150,6 +150,7 @@ Temporary Items
 
 # gitignore for work related files
 runlocal*
+*localized.*
 npm-debug.log
 *.iml
 mongo_utf8_test.js
@@ -157,10 +158,14 @@ mongo_utf8_test.js
 *.csproj.user
 *.sln
 *.suo
+*-reduced-pom.xml
 tracker/
 mongo_ext.js
 overlays/
+autocompleteTemplateDemo.dust
 
 # System file
 *.stackdump
 *.dmp
+*.pub
+enter
