--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -223,7 +223,7 @@ set-option -g status-fg cyan
 set-option -g status-interval 5
 set-option -g status-left-length 30
 set-option -g status-left '#[fg=magenta]» #[fg=blue,bold]#T#[default]'
-set-option -g status-right '#[fg=red,bold][[#(git rev-parse --abbrev-ref HEAD) ]] #[fg=cyan]»» #[fg=magenta]%R %m-%d'
+set-option -g status-right '#[fg=red,bold] #[fg=cyan]»» #[fg=magenta]%R %m-%d'
 set-option -g visual-activity on
  
 # Titles (window number, program name, active (or not)
@@ -252,3 +252,15 @@ set-option -g set-titles-string '#H:#S.#I.#P #W #T'
 
 # -----------------------------------------------------------------------------
 # vim: fen fdl=0 fdm=marker
+
+##CLIPBOARD selection integration
+###Requires prefix key before the command key
+##Copy tmux paste buffer to CLIPBOARD
+bind C-c run "tmux show-buffer | xsel -i -b"
+##Copy CLIPBOARD to tmux paste buffer and paste tmux paste buffer
+bind C-v run "tmux set-buffer -- \"$(xsel -o -b)\"; tmux paste-buffer"
+
+
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"
