--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -222,9 +222,10 @@ set-option -g status-bg black # colour213 # pink
 set-option -g status-fg cyan
 set-option -g status-interval 5
 set-option -g status-left-length 30
-set-option -g status-left '#[fg=magenta]» #[fg=blue,bold]#T#[default]'
-set-option -g status-right '#[fg=red,bold] #[fg=cyan]»» #[fg=magenta]%R %m-%d'
+set-option -g status-left '#[fg=magenta]» #[fg=blue,bold]#T#[default] •• #[fg=green]#H'
+set-option -g status-right '#[fg=red,bold] #[fg=cyan]»» #[fg=magenta]%d %b • %r'
 set-option -g visual-activity on
+set-option -g monitor-activity on
  
 # Titles (window number, program name, active (or not)
 set-option -g set-titles on
