--- a/.tmuxinator/groupby.yml
+++ b/.tmuxinator/groupby.yml
@@ -38,6 +38,6 @@ windows:
       layout: 7fd9,226x54,0,0{113x54,0,0,1,112x54,114,0[112x27,114,0,3,112x26,114,28,4]}
       panes:
         - #empty
-        - finch
         - mp3blaster
+        - #empty
 
