--- a/.tmuxinator/groupby.yml
+++ b/.tmuxinator/groupby.yml
@@ -20,22 +20,22 @@ root: ~/
 # use the `tmux list-windows` command to retrieve the exact layout you have configured as shown below
 windows:
   - editor:
-      layout: main-vertical
+      layout: 9821,226x54,0,0{113x54,0,0,0,112x54,114,0,10}
       panes:
         - vim
         - #empty
   - dev:
-      layout: main-vertical
+      layout: 2f9b,226x54,0,0{113x54,0,0,1,112x54,114,0,9}
       panes:
         - #empty
         - #empty
   - server:
-      layout: bd29,226x54,0,0[226x42,0,0,5,226x11,0,43,14]
+      layout: 8bbf,226x54,0,0[226x36,0,0,2,226x17,0,37,6]
       panes:
         - htop
         - sudo nethogs wlan0
   - entertainment:
-      layout: 7fd9,226x54,0,0{113x54,0,0,1,112x54,114,0[112x27,114,0,3,112x26,114,28,4]}
+      layout: 7fe3,226x54,0,0{113x54,0,0,3,112x54,114,0[112x27,114,0,7,112x26,114,28,8]}
       panes:
         - #empty
         - mp3blaster
