--- a/git/gitignore.properties
+++ b/git/gitignore.properties
@@ -24,7 +24,7 @@ local.properties
 # PDT-specific
 .buildpath
 
-# sbteclipse plugin 
+# sbteclipse plugin
 .target
 
 # TeXlipse plugin
@@ -170,3 +170,7 @@ autocompleteTemplateDemo.dust
 *.pub
 enter
 *.ctb
+
+# ignore jrebel files
+rebel*.xml
+**/rebel*.xml
