update gitconfig and tmux template

--- a/git/gitignore.properties
+++ b/git/gitignore.properties
@@ -21,6 +21,9 @@ local.properties
 # CDT-specific
 .cproject
 
+.project
+.classpath
+
 # PDT-specific
 .buildpath
 
@@ -113,7 +116,6 @@ $RECYCLE.BIN/
 *.un~
 Session.vim
 .netrwhist
-*~
 
 
 ### Maven ###
@@ -152,7 +154,6 @@ Temporary Items
 runlocal*
 *localized.*
 npm-debug.log
-*.iml
 mongo_utf8_test.js
 *.csproj
 *.csproj.user
