--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -37,6 +37,10 @@ MACHINES =
             {:box => "chef/centos-6.5",
              :provision => "bootstrap-docker.sh"
             },
+        "conscia" =>
+            {:box => "williamyeh/ubuntu-trusty64-docker",
+             :provision => "bootstrap-deb.sh"
+            }
     }
 
 VAGRANTFILE_API_VERSION = "2"
