--- a/i3/config
+++ b/i3/config
@@ -80,6 +80,7 @@ bindsym $mod+f fullscreen
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
+bindsym $mod+x layout toggle all
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
