--- a/i3/config
+++ b/i3/config
@@ -15,6 +15,8 @@
 # using the windows key as modifier
 set $mod Mod4
 
+set $rofi_opts -opacity 42 -lines 5 -rnow -padding 100 -fuzzy -bg "#002b36" -bc "#859900" -bw 4 -hlbg "#002b36" -fg "#fdf6e3" -font "DejaVu Sans Mono Book 21" -hlfg "#d33682" -eh 1.2 -hide-scrollbar
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
 font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -35,9 +37,20 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-#bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec dmenu_run
 #bindsym $mod+d exec rofi -show run
-bindsym $mod+d exec rofi -show run -font "snap 10" -fg "#505050" -bg "#000000" -hlfg "#ffb964" -hlbg "#000000" -o 85
+#bindsym $mod+d exec rofi -show run -font "snap 10" -fg "#505050" -bg "#000000" -hlfg "#ffb964" -hlbg "#000000" -o 85
+
+# Start rofi (as program launcher)
+
+#bindsym $mod+d exec --no-startup-id rofi $rofi_opts -show run
+
+#rofi settings
+#bindsym $mod+d exec rofi -show run -threads 0 -columns 2 -location 2 -m 0 -terminal urxvt -hide-scrollbar -separator-style solid -lines 5 -eh 1 -width 30 -padding 5 -opacity "100" -bw 3 -bc "#0087ff" -bg "#333333" -fg "#ffffff" -hlbg "#333333" -hlfg "#ffff77" -font "Inconsolata Sans Mono 14"
+
+
+# Start rofi (as window selector)
+#bindsym $mod+Tab exec --no-startup-id rofi $rofi_opts -show window
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
