--- a/git/gitignore.properties
+++ b/git/gitignore.properties
@@ -175,3 +175,13 @@ enter
 # ignore jrebel files
 rebel*.xml
 **/rebel*.xml
+
+### VisualStudioCode ###
+.vscode/*
+#!.vscode/settings.json
+#!.vscode/tasks.json
+#!.vscode/launch.json
+
+typings/
+typings.json
+jsconfig.json
