--- a/git/linux/.gitconfig
+++ b/git/linux/.gitconfig
@@ -142,3 +142,7 @@
 [commit]
     gpgsign = true
     verbose = true
+[filter "lfs"]
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
