--- a/i3/config
+++ b/i3/config
@@ -153,6 +153,9 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pulseaudio-ctl down
 bindsym XF86AudioRaiseVolume exec --no-startup-id pulseaudio-ctl up
 bindsym XF86AudioMute exec --no-startup-id pulseaudio-ctl mute
 
+# sleep screen
+bindsym $mod+F7 exec ~/personal_git/dotfiles/bash/screen-off.sh
+
 # lock pc
 bindsym $mod+F8 exec ~/personal_git/dotfiles/bash/lock.sh
 
