--- a/git/mac/.gitconfig
+++ b/git/mac/.gitconfig
@@ -110,3 +110,8 @@
 [commit]
 	gpgsign = true
     verbose = true
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
