--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -165,7 +165,7 @@ bind-key BSpace previous-window
 bind-key A command-prompt "rename-window %%"
 
 # quit
-bind-key \ confirm-before kill-server
+#bind-key \ confirm-before kill-server
 
 # displays
 bind-key * list-clients
@@ -268,11 +268,15 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'dracula/tmux'
+set -g @plugin 'thuanpham2311/tmux-fzf-session-switch'
 
 
 # dracula configuration
 set -g @dracula-show-fahrenheit false
 set -g @dracula-plugins "battery cpu-usage git ram-usage network weather time"
+
+# continous saving
+set -g @continuum-restore 'on'
 
 
 # Other examples:
